--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-router": "^2.6.0",
     "uuid": "^2.0.2"
   }
 }
