--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
+    "redux": "^3.5.2",
     "uuid": "^2.0.2"
   }
 }
